--- a/.github/workflows/compiler-clang.yml
+++ b/.github/workflows/compiler-clang.yml
@@ -66,7 +66,7 @@ jobs:
           body_path: clang-${{ matrix.config.jobs }}/out/README.md
           files: |
             clang-${{ matrix.config.jobs }}/out/*
-          token: ${GIT_SECRET_MAIN}
+          token: ${{ secrets.GIT_SECRET_MAIN }}
           tag_name: Xero-Clang-20.0.0
           make_latest: true
 
