--- a/.github/workflows/compiler-clang.yml
+++ b/.github/workflows/compiler-clang.yml
@@ -4,8 +4,8 @@ on:
   # push:
   #   branches:
   #     - clang/*
-  # schedule:
-  #   - cron: '15 1 * * *'
+  schedule:
+   - cron: '0 7 * * 1'
   workflow_dispatch:
 
 env:
