--- a/.github/workflows/compiler-clang.yml
+++ b/.github/workflows/compiler-clang.yml
@@ -69,7 +69,7 @@ jobs:
           tag_name: ${{ env.UploadTag }}
           token: ${{ secrets.GIT_SECRET_MAIN }}
           name: ${{ env.UploadTag }}
-          body_path: ${{ matrix.config.jobs }}/out/README.md
+          body_path: clang-${{ matrix.config.jobs }}/out/README.md
           repository: XeroMz69/Clang
    
       - name: Update Info
