--- a/.github/workflows/compiler-clang.yml
+++ b/.github/workflows/compiler-clang.yml
@@ -17,9 +17,7 @@ env:
 
 jobs:
   build:
-
     strategy:
-
       fail-fast: false
 
       matrix:
@@ -33,14 +31,11 @@ jobs:
             check_duplicate: "Y"
 
     name: Clang-${{ matrix.config.jobs }}
-    
     runs-on: ubuntu-latest
-
     container: 
       image: zycromerz/tcdocker:v2
 
     steps:
-
       - name: checkout
         if: matrix.config.type == 'clang'
         uses: actions/checkout@v2
@@ -56,7 +51,14 @@ jobs:
           bash ci.sh deps
           bash update-clang-version.sh ${{ matrix.config.jobs }}
           bash clang-builder.sh ${{ matrix.config.jobs }} ${{ matrix.config.check_duplicate }}
-          
+
+      - name: Generate release tag
+        id: generate_release_tag
+        uses: alexvingg/next-release-tag@v1.0.4
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          tag_prefix: ''
+      
       - name: Upload Release
         if: matrix.config.type == 'clang'
         env: 
@@ -64,9 +66,9 @@ jobs:
         uses: softprops/action-gh-release@v1
         with:
           files: clang-${{ matrix.config.jobs }}/out/*.tar.gz
-          tag_name: "Xero-Clang-${{ env.Date }}"
+          tag_name: "Xero-Clang-${{ steps.generate_release_tag.outputs.release_tag }}"
           token: ${{ secrets.GIT_SECRET_MAIN }}
-          name: "Xero-Clang-${{ env.Date }}"
+          name: "Xero-Clang-${{ steps.generate_release_tag.outputs.release_tag }}"
           body_path: clang-${{ matrix.config.jobs }}/out/README.md
           repository: XeroMz69/Clang
    
